[package]
name = "comfyui-workflows"
version = "0.1.0"
edition = "2024"
description = "ComfyUI 워크플로우·노드·모델 관리 CLI"

[[bin]]
name = "comfyui-workflows"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"

[build-dependencies]
hardcoded-lint = { git = "https://github.com/dalsoop/hardcoded-lint" }
